Updated Legitimate table schema
